--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Documentacion/Grh-Solutions/grh-solutions.client/node_modules
 /Documentacion/Grh-Solutions/grh-solutions.server/node_modules
+/Documentacion/Grh-Solutions/grh-solutions.client/.vite
