--- a/Grh-Solutions/grh-solutions.server/package.json
+++ b/Grh-Solutions/grh-solutions.server/package.json
@@ -26,6 +26,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.4",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.2"
   }
 }
