--- a/Grh-Solutions/grh-solutions.server/package.json
+++ b/Grh-Solutions/grh-solutions.server/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "api-rest",
+  "name": "task-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "start": "node ./src/index.ts"
+  "private": true,
+  "engines": {
+    "node": "20.17.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon",
+    "build": "tsc",
+    "watch": "tsc -w"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.9.2",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/morgan": "^1.9.4",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.1",
-    "swagger-jsdoc": "^3.5.0",
-    "swagger-ui-express": "^4.1.2"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.10.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
