--- a/Grh-Solutions/grh-solutions.client/package.json
+++ b/Grh-Solutions/grh-solutions.client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.28.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
