--- a/Grh-Solutions/grh-solutions.client/package.json
+++ b/Grh-Solutions/grh-solutions.client/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/x-date-pickers": "^7.28.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
