--- a/Grh-Solutions/grh-solutions.client/package.json
+++ b/Grh-Solutions/grh-solutions.client/package.json
@@ -19,10 +19,12 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "swiper": "^11.2.5"
+    "swiper": "^11.2.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
