--- a/Grh-Solutions/grh-solutions.client/package.json
+++ b/Grh-Solutions/grh-solutions.client/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.5",
     "yup": "^1.6.1"
@@ -31,6 +32,7 @@
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-resizable": "^3.0.8",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
