--- a/Grh-Solutions/grh-solutions.client/package.json
+++ b/Grh-Solutions/grh-solutions.client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "html2pdf.js": "^0.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-resizable": "^3.0.5",
