--- a/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
+++ b/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
@@ -6,5 +6,9 @@
     {
         "method": "POST",
         "url": "/api/login/register"
+    },
+    {
+        "method": "GET",
+        "url": "/api/typeDocuments/getAllNoPage"
     }
 ]
