login ajustes, axios valida el 401 para cerrar sesion adelanto del formulario de cv

--- a/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
+++ b/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
@@ -10,5 +10,8 @@
     {
         "method": "GET",
         "url": "/api/typeDocuments/getAllNoPage"
+    },{
+        "method": "GET",
+        "url": "/api/profiles/getByUserId"
     }
 ]
