--- a/Grh-Solutions/grh-solutions.server/package.json
+++ b/Grh-Solutions/grh-solutions.server/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "nodemailer": "^7.0.3",
+    "pdfkit": "^0.17.1",
+    "pdfkit-table": "^0.1.99",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
@@ -26,9 +29,11 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.17.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.0.2",
