Aplicacion de permisos a roles en el front end solo aplicado al navbar. Pendiente validacion por url

--- a/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
+++ b/Grh-Solutions/grh-solutions.server/src/data/appSettings.json
@@ -13,5 +13,8 @@
     },{
         "method": "GET",
         "url": "/api/profiles/getByUserId"
+    },{
+        "method": "POST",
+        "url": "/api/permissions/getPermissions"
     }
 ]
