--- a/Grh-Solutions/grh-solutions.server/.env
+++ b/Grh-Solutions/grh-solutions.server/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://admin:Admin05@grh-solutions.b3yt6.mongodb.net/"
 MONGO_URI="mongodb+srv://admin:Admin05@grh-solutions.b3yt6.mongodb.net/"
 EMAIL_USER="grhsolutions14@gmail.com"
 EMAIL_PASS="Grh_Solutions14?"
+USE_ADMIN_PERMISSIONS_RECEIVER=1
